// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
.c12 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem 2.5rem;
  background-color: #f9f9fc;
  border-right: 1px solid #c9d3df;
}

.c2 {
  margin: 1.25rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #434956;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 2rem 0;
}

.c9 {
  padding: 1rem 0;
  color: #0c0c0e;
  font-weight: 400;
  font-size: 1.375rem;
  border-bottom: 1px solid #c9d3df;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.25rem 2.5rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #c9d3df;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        test
      </div>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialStepIndex 1`] = `
.c12 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c12[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem 2.5rem;
  background-color: #f9f9fc;
  border-right: 1px solid #c9d3df;
}

.c2 {
  margin: 1.25rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c13 {
  margin-right: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #434956;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 2rem 0;
}

.c9 {
  padding: 1rem 0;
  color: #0c0c0e;
  font-weight: 400;
  font-size: 1.375rem;
  border-bottom: 1px solid #c9d3df;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.25rem 2.5rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #c9d3df;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c4 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          2/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        test
      </div>
      <div
        class="c10"
      >
        <p>
          Deuxieme Etape 
          <button>
            Submit
          </button>
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
          type="button"
        >
          Précédent
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
.c12 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem 2.5rem;
  background-color: #f9f9fc;
  border-right: 1px solid #c9d3df;
}

.c2 {
  margin: 1.25rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #434956;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 2rem 0;
}

.c9 {
  padding: 1rem 0;
  color: #0c0c0e;
  font-weight: 400;
  font-size: 1.375rem;
  border-bottom: 1px solid #c9d3df;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.25rem 2.5rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #c9d3df;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/3
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          3
        </span>
        Name
      </span>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        test
      </div>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should inject rules component 1`] = `
.c12 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem 2.5rem;
  background-color: #f9f9fc;
  border-right: 1px solid #c9d3df;
}

.c2 {
  margin: 1.25rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #434956;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 2rem 0;
}

.c9 {
  padding: 1rem 0;
  color: #0c0c0e;
  font-weight: 400;
  font-size: 1.375rem;
  border-bottom: 1px solid #c9d3df;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.25rem 2.5rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #c9d3df;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <p>
      Rule
    </p>
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        test
      </div>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Suivant 1`] = `
.c12 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c12[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem 2.5rem;
  background-color: #f9f9fc;
  border-right: 1px solid #c9d3df;
}

.c2 {
  margin: 1.25rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c13 {
  margin-right: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #434956;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 2rem 0;
}

.c9 {
  padding: 1rem 0;
  color: #0c0c0e;
  font-weight: 400;
  font-size: 1.375rem;
  border-bottom: 1px solid #c9d3df;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.25rem 2.5rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #c9d3df;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c4 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          2/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        test
      </div>
      <div
        class="c10"
      >
        <p>
          Deuxieme Etape 
          <button>
            Submit
          </button>
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
          type="button"
        >
          Précédent
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
.c12 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):active,
.c12:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
}

.c12[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1.25rem 2.5rem;
  background-color: #f9f9fc;
  border-right: 1px solid #c9d3df;
}

.c2 {
  margin: 1.25rem 0;
  font-weight: 600;
}

.c3 {
  display: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #006be6;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 8.4375rem;
  padding: 0 0.25rem;
  color: #adb9c9;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #006be6;
  border-radius: 49%;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1.6rem;
  height: 1.6rem;
  margin: 0.5rem 0.625rem;
  margin-left: 0;
  color: #fff;
  background-color: #adb9c9;
  border-radius: 49%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 2rem 0;
}

.c13 {
  margin-left: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0;
  overflow: auto;
  color: #434956;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
}

.c10 {
  -webkit-flex-basis: 240px;
  -ms-flex-preferred-size: 240px;
  flex-basis: 240px;
  margin: 2rem 0;
}

.c9 {
  padding: 1rem 0;
  color: #0c0c0e;
  font-weight: 400;
  font-size: 1.375rem;
  border-bottom: 1px solid #c9d3df;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 1.25rem 2.5rem;
}

@media (max-width:600px) {
  .c1 {
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    border: none;
    border-bottom: 1px solid #c9d3df;
  }
}

@media (max-width:600px) {
  .c3 {
    display: inline-block;
  }
}

@media (max-width:600px) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:600px) {
  .c6 {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
      >
        Étapes
         
        <span
          class="c3"
        >
          1/2
        </span>
      </span>
      <span
        class="c4"
      >
        <span
          class="c5"
        >
          1
        </span>
        First Step
      </span>
      <span
        class="c6"
      >
        <span
          class="c7"
        >
          2
        </span>
        Second Step
      </span>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        test
      </div>
      <div
        class="c10"
      >
        <p>
          Premiere Etape
        </p>
      </div>
      <div
        class="c11"
      >
        <button
          class="c12 c13"
        >
          Suivant
        </button>
      </div>
    </div>
  </form>
</div>
`;
